force-app/main/default/objects/Prediction__c/Prediction__c.object-meta.xml
<CustomObject>
    <label>Case Classification Label</label>
    <nameField>
        <displayFormat>CLS-{0000}</displayFormat>
        <label>Case Classification Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Classification Labels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>