force-app/main/default/objects/Prediction__c/fields/LOB_Code__c.field-meta.xml
<CustomField>
    <fullName>LOB_Code__c</fullName>
    <label>LOB Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>