force-app/main/default/objects/Prediction__c/fields/Resolution_Flag__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resolution</label>
    <type>Checkbox</type>
</CustomField>