force-app/main/default/objects/Prediction__c/fields/Symptom__c.field-meta.xml
<CustomField>
    <fullName>Symptom__c</fullName>
    <formula>NOT (Resolution_Flag__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Symptom</label>
    <type>Checkbox</type>
</CustomField>